# CV-Screening

./: README.md  main.py  pyproject.toml  requirements.txt  test.py
data/preprocessed/0463815d-153f-465e-92aa-db8136edc09d/: resumes.json
data/preprocessed/08cf5633-a5b5-432e-b3f1-cb85c11c05a8/: resumes.json
data/preprocessed/37d48c8b-6af2-41b1-9d43-93a337cd0944/: resumes.json
data/preprocessed/b67ed4aa-8aae-4610-b799-76cf9fb68236/: resumes.json
data/preprocessed/c3a3c3a4-9e29-4896-8ce3-2a3256d7d84a/: jd.txt  resumes.json
data/preprocessed/ec4a59bc-4f70-43f2-a9f4-84c703a7ea0f/: resumes.json
data/raw/: jd_information_technology.txt  result.txt
data/raw/0463815d-153f-465e-92aa-db8136edc09d/cv/: Resume.csv
data/raw/08cf5633-a5b5-432e-b3f1-cb85c11c05a8/cv/: Resume.csv
data/raw/37d48c8b-6af2-41b1-9d43-93a337cd0944/cv/: Resume.csv
data/raw/b67ed4aa-8aae-4610-b799-76cf9fb68236/cv/: Resume.csv
data/raw/c3a3c3a4-9e29-4896-8ce3-2a3256d7d84a/cv/: Resume.csv
data/raw/ec4a59bc-4f70-43f2-a9f4-84c703a7ea0f/cv/: Resume.csv
src/: app.py  test.ipynb  test.py  utils.py
src/data_preprocessing/: loader.py  schema.py
src/gateway/: config.py  cost_tracker.py  router.py
src/graph/: build_graph.py  nodes.py  state.py
src/guardrails/: cv_checker.py  jd_checker.py
src/init_model/: client.py
src/schema/: cv_schema.py
src/subagents/: education_scorer.py  experience_scorer.py  orchestrator.py  skill_matcher.py
src/template/: main-test.html  main.html
